# diploma-thesis

./: .gitignore  Makefile  README.md  Untitled.ipynb  environment.yml  knn-classification.ipynb  network_config.yaml  setup.cfg  train-config-tst.yaml
docker/: docker-compose.yml
experiments/networks/: V0_1__1layer_network.yaml  V0_2__1layer_network_with_softmax.yaml  V1_0__2layers_network.yaml  V1_1__2layers_network_after_kde_rework.yaml  V1_2__2layer_network_with_softmax.yaml  V2_0__No_kde_2layer_network.yaml  V2_1__No_kde_1layer_network.yaml
im2gps/: configutils.py  exceptions.py  utils.py
im2gps/cli/: cli.py  data.py  localisation.py
im2gps/conf/: config-local.yaml  config.py  config.yaml  configschema.py
im2gps/core/: cirtorchnet.py  index.py  localisation.py  metric.py
im2gps/data/: data.py  descriptors.py  flickr_repo.py  flickrclient.py  old_descriptors.py
im2gps/imret/: __main__.py  cirtorchnet.py  localisation.py
im2gps/lib/: cirtorchnet.py  index.py  localisation.py  metric.py
im2gps/services/: index.py  localisation.py  network.py  stats.py
notebooks/: data_analysis.ipynb  finetuning_avg.ipynb  finetuning_kde.ipynb  kde_performance_analysis.ipynb  knn-classification.ipynb  knn-localisation.ipynb  loc_method_comparison.ipynb  network_analysis.ipynb  photo_map.ipynb  playground.ipynb  tb_experiments.ipynb
resources/: cirtorch-0.0.1-py3-none-any.whl  datasets.json  descriptor_ids.json
results/: test_densities.csv
results/densities/: densities-0.csv  densities-1.csv  densities-2.csv  densities-3.csv  (+6 more)
tests/: test_nn_functions.py
(+147 files in other folders)
