[metadata]
name = im2gps
description = Image localization using image retrieval
author = Andrii Zakharchenko
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ABlack-git/diploma-thesis

[options]
include_package_data = True
install_requires =
    click >=7,<8
    requests >=2.0.0, <3
    mongoengine == 0.20.*
    pillow >=8, <9
    torch >=1.0.0, <1.4.0
    omegaconf >=2, <3
    pyyaml >=5, <6
    flickrapi >=2.4, <3
    haversine >=2, <3
    tables >=3, <=3.6.1


packages = find:
python_requires = >=3.7
[options.entry_points]
console_scripts =
    im2gps = im2gps.cli.cli:entry_point
[bdist_wheel]
universal = 0