[metadata]
name = im2gps
description = Image localization using image retrieval
author = Andrii Zakharchenko
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ABlack-git/diploma-thesis

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    im2gps = im2gps.cli.cli:entry_point
[bdist_wheel]
universal = 0